# mogwai

./: .gitignore  .gitlab-ci.yml  AUTHORS  README  README.md  meson.build  meson_options.txt  mogwai.doap
debian/: changelog  control  copyright  libmogwai-helper-1-tests.install  libmogwai-schedule-1-tests.install  libmogwai-schedule-client-0-dev.install  libmogwai-schedule-client-0-tests.install  libmogwai-schedule-client-0.install  libmogwai-schedule-client-1-tests.install  libmogwai-schedule-client-1.install  libmogwai-tariff-0-dev.install  libmogwai-tariff-0-tests.install  libmogwai-tariff-0.install  mogwai-schedule-tools-tests.install  mogwai-schedule-tools.install  mogwai-schedule-tools.links  mogwai-scheduled-tests.install  mogwai-scheduled.install  mogwai-scheduled.postinst  mogwai-tariff-tools-tests.install  mogwai-tariff-tools.install  mogwai-tariff-tools.links  rules
debian/tests/: control  gnome-desktop-testing  mogwai-tariff
docs/: debugging.md  development.md
libhelper/: meson.build  service.c  service.h
libhelper/tests/: meson.build  service.c
libmogwai-schedule/: clock-system.c  clock-system.h  clock.c  clock.h  connection-monitor-nm.c  connection-monitor-nm.h  connection-monitor.c  connection-monitor.h  meson.build  peer-manager-dbus.c  peer-manager-dbus.h  peer-manager.c  peer-manager.h  schedule-entry-interface.h  schedule-entry.c  schedule-entry.h  schedule-service.c  schedule-service.h  scheduler-interface.h  scheduler.c  scheduler.h  service.c  service.h
libmogwai-schedule-client/: meson.build  schedule-entry.c  schedule-entry.h  scheduler.c  scheduler.h
libmogwai-schedule-client/tests/: client-schedule-entry.c  client-scheduler.c  meson.build  schedule-entry.c  scheduler.c
libmogwai-schedule/tests/: clock-dummy.c  clock-dummy.h  connection-monitor-dummy.c  connection-monitor-dummy.h  meson.build  peer-manager-dummy.c  peer-manager-dummy.h  schedule-entry.c  schedule-service.c  scheduler.c  service.c  signal-logger.c  signal-logger.h
libmogwai-tariff/: meson.build  period.c  period.h  tariff-builder.c  tariff-builder.h  tariff-loader.c  tariff-loader.h  tariff.c  tariff.h
libmogwai-tariff/tests/: common.c  common.h  meson.build  period.c  tariff-builder.c  tariff-loader.c  tariff.c
mogwai-monitord/: main.c  meson.build
mogwai-schedule-client/: main.c  meson.build
mogwai-schedule-client/docs/: mogwai-schedule-client.8
mogwai-schedule-client/tests/: client.c  meson.build
mogwai-scheduled/: com.endlessm.MogwaiSchedule1.conf.in  com.endlessm.MogwaiSchedule1.rules.in  com.endlessm.MogwaiSchedule1.service.in  main.c  meson.build  mogwai-scheduled.conf.in  mogwai-scheduled.service.in
mogwai-scheduled/docs/: mogwai-scheduled.8
mogwai-scheduled/tests/: meson.build  mogwai-scheduled.py
mogwai-tariff/: main.c  meson.build
mogwai-tariff/docs/: mogwai-tariff.8  testing.md
mogwai-tariff/tests/: meson.build  mogwai-tariff.py
subprojects/: glib-2.0.wrap  gsystemservice-0.wrap
