option(
  'scheduler_daemon_user',
  type: 'string',
  value: 'mogwai-scheduled',
  description: 'username to run the scheduler daemon as',
)
option(
  'installed_tests',
  type: 'boolean',
  value: false,
  description: 'enable installed tests'
)
option(
  'soup2',
  type: 'boolean',
  value: false,
  description: 'build with libsoup2',
)